combined factor groups created

--- a/6_CCS-Process-ADTs.ipynb
+++ b/6_CCS-Process-ADTs.ipynb
@@ -42,7 +42,7 @@
     "#read parameter tables\n",
     "prmExclusions    = pd.read_csv(os.path.join(dirParams, r'exclusions.csv' ), parse_dates=['DATEFROM','DATETO'])\n",
     "prmHolidays      = pd.read_csv(os.path.join(dirParams, r'holidays.csv'   ))\n",
-    "prmGeographies   = pd.read_csv(os.path.join(dirParams, r'geographies.csv'))\n",
+    "#prmGeographies   = pd.read_csv(os.path.join(dirParams, r'geographies.csv'))\n",
     "prmStationGroups = pd.read_csv(os.path.join(dirParams, r'station_groups.csv'))\n",
     "\n",
     "prmHolidays['DATE'] = pd.to_datetime(prmHolidays[['YEAR', 'MONTH', 'DAY']])\n",
@@ -285,6 +285,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>STATION</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>DAY</th>\n",
+       "      <th>DOW</th>\n",
+       "      <th>HOUR</th>\n",
+       "      <th>DIR</th>\n",
+       "      <th>HOURVOL</th>\n",
+       "      <th>DATE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [index, STATION, YEAR, MONTH, DAY, DOW, HOUR, DIR, HOURVOL, DATE]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_CCSHourDir[(df_CCSHourDir['STATION']==341) & (df_CCSHourDir['YEAR']==2019) & (df_CCSHourDir['MONTH']==1)]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -300,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +367,7 @@
        "45120"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +404,7 @@
        "317882"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +609,7 @@
        "[257758 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +786,7 @@
        "[63629 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +944,7 @@
        "[9065 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1463,7 @@
        "[238537 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1606,7 @@
        "[8352 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1761,7 @@
        "[58464 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1724,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1755,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2154,7 +2212,7 @@
        "[186 rows x 22 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2166,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2330,7 @@
        "[112 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2296,7 +2354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2328,7 +2386,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2339,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2415,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a987f1efebce4a4db288548c1e76d8ed",
+       "model_id": "b31eb346fb164ec7b08886cf20ab1900",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2371,7 +2429,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-b6164072-c9a2-4b6a-99a4-caaedb13f807\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-f6185b94-3557-4739-8367-985a0a69619c\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2383,7 +2441,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-html-embed-preview-b6164072-c9a2-4b6a-99a4-caaedb13f807\"></div>"
+       "<div class=\"map-html-embed-preview-f6185b94-3557-4739-8367-985a0a69619c\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
