--- a/4_Process-Truck-Data-New-Format.ipynb
+++ b/4_Process-Truck-Data-New-Format.ipynb
@@ -2,123 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "import numpy as np\r\n",
-    "import os\r\n",
-    "import pandas as pd\r\n"
-   ],
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dirWork         = os.getcwd()\n",
+    "dirInput        = os.path.join(dirWork, r'input'       )\n",
+    "dirIntermediate = os.path.join(dirWork, r'intermediate')\n",
+    "dirResults      = os.path.join(dirWork, r'results'     )\n",
+    "dirParams       = os.path.join(dirWork, r'params'      )"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "dirWork         = os.getcwd()\r\n",
-    "dirInput        = os.path.join(dirWork, r'input'       )\r\n",
-    "dirIntermediate = os.path.join(dirWork, r'intermediate')\r\n",
-    "dirResults      = os.path.join(dirWork, r'results'     )\r\n",
-    "dirParams       = os.path.join(dirWork, r'params'      )"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "#import excel spreadsheet\n",
+    "\n",
+    "filename_File1 = os.path.join(dirInput, \"udot\\\\TruckTrafficOnUtahHighways\\\\Truck Traffic on Utah Highways 2017.xlsx\")\n",
+    "filename_File2 = os.path.join(dirInput, \"udot\\\\TruckTrafficOnUtahHighways\\\\Truck Traffic on Utah Highways 2018.xlsx\")\n",
+    "filename_File3 = os.path.join(dirInput, \"udot\\\\TruckTrafficOnUtahHighways\\\\Truck Traffic on Utah Highways 2019.xlsx\")\n",
+    "filename_File4 = os.path.join(dirInput, \"udot\\\\TruckTrafficOnUtahHighways\\\\Truck Traffic on Utah Highways 2020.xlsx\")\n",
+    "filename_File5 = os.path.join(dirInput, \"udot\\\\TruckTrafficOnUtahHighways\\\\Truck Traffic on Utah Highways 2021.xlsx\")\n",
+    "\n",
+    "xl_file1 = pd.ExcelFile(filename_File1)\n",
+    "xl_file2 = pd.ExcelFile(filename_File2)\n",
+    "xl_file3 = pd.ExcelFile(filename_File3)\n",
+    "xl_file4 = pd.ExcelFile(filename_File4)\n",
+    "xl_file5 = pd.ExcelFile(filename_File5)\n",
+    "\n",
+    "dfs1 = {sheet_name: xl_file1.parse(sheet_name) \n",
+    "        for sheet_name in xl_file1.sheet_names}\n",
+    "dfs2 = {sheet_name: xl_file2.parse(sheet_name) \n",
+    "        for sheet_name in xl_file2.sheet_names}\n",
+    "dfs3 = {sheet_name: xl_file3.parse(sheet_name) \n",
+    "        for sheet_name in xl_file3.sheet_names}\n",
+    "dfs4 = {sheet_name: xl_file4.parse(sheet_name) \n",
+    "        for sheet_name in xl_file4.sheet_names}\n",
+    "dfs5 = {sheet_name: xl_file5.parse(sheet_name) \n",
+    "        for sheet_name in xl_file5.sheet_names}\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "#import excel spreadsheet\r\n",
-    "\r\n",
-    "filename_File1 = os.path.join(dirInput, \"udot\\\\TruckTrafficOnUtahHighways\\\\Truck Traffic on Utah Highways 2017.xlsx\")\r\n",
-    "filename_File2 = os.path.join(dirInput, \"udot\\\\TruckTrafficOnUtahHighways\\\\Truck Traffic on Utah Highways 2018.xlsx\")\r\n",
-    "filename_File3 = os.path.join(dirInput, \"udot\\\\TruckTrafficOnUtahHighways\\\\Truck Traffic on Utah Highways 2019.xlsx\")\r\n",
-    "\r\n",
-    "xl_file1 = pd.ExcelFile(filename_File1)\r\n",
-    "xl_file2 = pd.ExcelFile(filename_File2)\r\n",
-    "xl_file3 = pd.ExcelFile(filename_File3)\r\n",
-    "\r\n",
-    "\r\n",
-    "dfs1 = {sheet_name: xl_file1.parse(sheet_name) \r\n",
-    "        for sheet_name in xl_file1.sheet_names}\r\n",
-    "dfs2 = {sheet_name: xl_file2.parse(sheet_name) \r\n",
-    "        for sheet_name in xl_file2.sheet_names}\r\n",
-    "dfs3 = {sheet_name: xl_file3.parse(sheet_name) \r\n",
-    "        for sheet_name in xl_file3.sheet_names}\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "source": [
-    "dfTruckData = dfs1['Roadway'][0:0] #just copy data structure, no row data\r\n",
-    "\r\n",
-    "#take out of dictionary and put into single dataframe\r\n",
-    "for key in dfs1:\r\n",
-    "    dfs1[key]['YEAR'] = 2017\r\n",
-    "    dfTruckData = dfTruckData.append(dfs1[key], ignore_index=True)\r\n",
-    "for key in dfs2:\r\n",
-    "    dfs2[key]['YEAR'] = 2018\r\n",
-    "    dfTruckData = dfTruckData.append(dfs2[key], ignore_index=True)\r\n",
-    "for key in dfs3:\r\n",
-    "    dfs3[key]['YEAR'] = 2019\r\n",
-    "    dfTruckData = dfTruckData.append(dfs3[key], ignore_index=True)\r\n",
-    "        \r\n",
-    "dfTruckData = dfTruckData.dropna()\r\n",
-    "\r\n",
-    "dfTruckData['YEAR'] = dfTruckData['YEAR'].astype(int)\r\n",
-    "dfTruckData['ROUTE'] = dfTruckData['ROUTE'].apply(lambda x: '{0:0>4}'.format(x))\r\n",
-    "dfTruckData = dfTruckData[['YEAR','ROUTE','BEGMP','ENDMP','DESC','AADT','SUTRK','CUTRK','SegID']]\r\n",
-    "dfTruckData"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "      YEAR ROUTE   BEGMP   ENDMP  \\\n",
-       "0     2017  0006   0.000  46.017   \n",
-       "1     2017  0006  46.017  77.545   \n",
-       "2     2017  0006  77.545  82.885   \n",
-       "3     2017  0006  82.885  83.897   \n",
-       "4     2017  0006  83.897  87.687   \n",
-       "...    ...   ...     ...     ...   \n",
-       "5614  2019  0319   0.000   0.901   \n",
-       "5615  2019  0491   0.000   0.456   \n",
-       "5616  2019  0491   0.456   2.031   \n",
-       "5617  2019  0491   2.031  17.069   \n",
-       "5618  2019  089A   0.000   2.970   \n",
-       "\n",
-       "                                                   DESC    AADT     SUTRK  \\\n",
-       "0         Nevada State Line via SR 6 - Antelope Springs   409.0  0.249610   \n",
-       "1     Antelope Springs via SR 6 - Gunnison Massacre ...   366.0  0.175063   \n",
-       "2     Gunnison Massacre Site via SR 6 - Main St Hinc...   525.0  0.162481   \n",
-       "3     Main St via SR 6 (500 N) Hinckley - SR 257 (40...  1961.0  0.149898   \n",
-       "4     SR 257 (4000 W) Hinckley via SR 6 - 1000 W to ...  3468.0  0.137314   \n",
-       "...                                                 ...     ...       ...   \n",
-       "5614   SR 40 Mayflower - Jordanelle Reservoir Boat Ramp  1287.0  0.094570   \n",
-       "5615  SR 191 (Main St) via Center St - 500 E Monticello  5741.0  0.070659   \n",
-       "5616     500 E via Center St - Port of Entry Monticello  3313.0  0.070659   \n",
-       "5617  Monticello POE via SR 491 - Colorado State Lin...  3092.0  0.070659   \n",
-       "5618         Arizona State Line - SR 89 Kanab *ATR 412*  5202.0  0.138934   \n",
-       "\n",
-       "         CUTRK      SegID  \n",
-       "0     0.232449  000600000  \n",
-       "1     0.333819  000604602  \n",
-       "2     0.264722  000607755  \n",
-       "3     0.195620  000608289  \n",
-       "4     0.126513  000608390  \n",
-       "...        ...        ...  \n",
-       "5614  0.254773  031900000  \n",
-       "5615  0.297167  049100000  \n",
-       "5616  0.297167  049100046  \n",
-       "5617  0.297167  049100203  \n",
-       "5618  0.060180  089A00000  \n",
-       "\n",
-       "[5613 rows x 9 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -150,168 +94,67 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>0006</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>46.017</td>\n",
-       "      <td>Nevada State Line via SR 6 - Antelope Springs</td>\n",
-       "      <td>409.0</td>\n",
-       "      <td>0.249610</td>\n",
-       "      <td>0.232449</td>\n",
-       "      <td>000600000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>0006</td>\n",
-       "      <td>46.017</td>\n",
-       "      <td>77.545</td>\n",
-       "      <td>Antelope Springs via SR 6 - Gunnison Massacre ...</td>\n",
-       "      <td>366.0</td>\n",
-       "      <td>0.175063</td>\n",
-       "      <td>0.333819</td>\n",
-       "      <td>000604602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>0006</td>\n",
-       "      <td>77.545</td>\n",
-       "      <td>82.885</td>\n",
-       "      <td>Gunnison Massacre Site via SR 6 - Main St Hinc...</td>\n",
-       "      <td>525.0</td>\n",
-       "      <td>0.162481</td>\n",
-       "      <td>0.264722</td>\n",
-       "      <td>000607755</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>0006</td>\n",
-       "      <td>82.885</td>\n",
-       "      <td>83.897</td>\n",
-       "      <td>Main St via SR 6 (500 N) Hinckley - SR 257 (40...</td>\n",
-       "      <td>1961.0</td>\n",
-       "      <td>0.149898</td>\n",
-       "      <td>0.195620</td>\n",
-       "      <td>000608289</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>0006</td>\n",
-       "      <td>83.897</td>\n",
-       "      <td>87.687</td>\n",
-       "      <td>SR 257 (4000 W) Hinckley via SR 6 - 1000 W to ...</td>\n",
-       "      <td>3468.0</td>\n",
-       "      <td>0.137314</td>\n",
-       "      <td>0.126513</td>\n",
-       "      <td>000608390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5614</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>0319</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.901</td>\n",
-       "      <td>SR 40 Mayflower - Jordanelle Reservoir Boat Ramp</td>\n",
-       "      <td>1287.0</td>\n",
-       "      <td>0.094570</td>\n",
-       "      <td>0.254773</td>\n",
-       "      <td>031900000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5615</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>0491</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.456</td>\n",
-       "      <td>SR 191 (Main St) via Center St - 500 E Monticello</td>\n",
-       "      <td>5741.0</td>\n",
-       "      <td>0.070659</td>\n",
-       "      <td>0.297167</td>\n",
-       "      <td>049100000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5616</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>0491</td>\n",
-       "      <td>0.456</td>\n",
-       "      <td>2.031</td>\n",
-       "      <td>500 E via Center St - Port of Entry Monticello</td>\n",
-       "      <td>3313.0</td>\n",
-       "      <td>0.070659</td>\n",
-       "      <td>0.297167</td>\n",
-       "      <td>049100046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5617</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>0491</td>\n",
-       "      <td>2.031</td>\n",
-       "      <td>17.069</td>\n",
-       "      <td>Monticello POE via SR 491 - Colorado State Lin...</td>\n",
-       "      <td>3092.0</td>\n",
-       "      <td>0.070659</td>\n",
-       "      <td>0.297167</td>\n",
-       "      <td>049100203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5618</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>089A</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2.970</td>\n",
-       "      <td>Arizona State Line - SR 89 Kanab *ATR 412*</td>\n",
-       "      <td>5202.0</td>\n",
-       "      <td>0.138934</td>\n",
-       "      <td>0.060180</td>\n",
-       "      <td>089A00000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5613 rows × 9 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [YEAR, ROUTE, BEGMP, ENDMP, DESC, AADT, SUTRK, CUTRK, SegID]\n",
+       "Index: []"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "dfTruckData = dfs1['Roadway'][0:0] #just copy data structure, no row data\n",
+    "\n",
+    "#take out of dictionary and put into single dataframe\n",
+    "for key in dfs1:\n",
+    "    dfs1[key]['YEAR'] = 2017\n",
+    "    dfTruckData = dfTruckData.append(dfs1[key], ignore_index=True)\n",
+    "for key in dfs2:\n",
+    "    dfs2[key]['YEAR'] = 2018\n",
+    "    dfTruckData = dfTruckData.append(dfs2[key], ignore_index=True)\n",
+    "for key in dfs3:\n",
+    "    dfs3[key]['YEAR'] = 2019\n",
+    "    dfTruckData = dfTruckData.append(dfs3[key], ignore_index=True)\n",
+    "for key in dfs4:\n",
+    "    dfs4[key]['YEAR'] = 2020\n",
+    "    dfTruckData = dfTruckData.append(dfs4[key], ignore_index=True)\n",
+    "for key in dfs5:\n",
+    "    dfs5[key]['YEAR'] = 2021\n",
+    "    dfTruckData = dfTruckData.append(dfs5[key], ignore_index=True)\n",
+    "        \n",
+    "dfTruckData = dfTruckData.dropna()\n",
+    "\n",
+    "dfTruckData['YEAR'] = dfTruckData['YEAR'].astype(int)\n",
+    "dfTruckData['ROUTE'] = dfTruckData['ROUTE'].apply(lambda x: '{0:0>4}'.format(x))\n",
+    "dfTruckData = dfTruckData[['YEAR','ROUTE','BEGMP','ENDMP','DESC','AADT','SUTRK','CUTRK','SegID']]\n",
+    "dfTruckData"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "source": [
-    "#export to csv\r\n",
-    "import csv\r\n",
-    "\r\n",
-    "dfTruckData.to_csv(os.path.join(dirIntermediate, r'AnnualTruckDailyTraffic_NewFormat.csv'),index=False, quotechar='\"', quoting=csv.QUOTE_NONNUMERIC)"
-   ],
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "#export to csv\n",
+    "import csv\n",
+    "\n",
+    "dfTruckData.to_csv(os.path.join(dirIntermediate, r'AnnualTruckDailyTraffic_NewFormat.csv'),index=False, quotechar='\"', quoting=csv.QUOTE_NONNUMERIC)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
@@ -333,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
